--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,23 +30,49 @@ steps:
       Import-PfxCertificate -FilePath $pfx -CertStoreLocation Cert:\CurrentUser\My -Password $pfxpass 
 
 - task: VSBuild@1
+  displayName: Build x86
   inputs:
     solution: '**/*.sln'
     platform: 'x86'
     configuration: 'Release'
 
 - task: VSBuild@1
+  displayName: Build x65
   inputs:
     solution: '**/*.sln'
     platform: 'x64'
     configuration: 'Release'
 
+- task: PowerShell@2
+  displayName: import Certificate
+  inputs:
+    targetType: 'inline'
+    script: |
+      $timestampUrl = "http://timestamp.digicert.com"
+      Write-Host "TIMESTAMP " $timestampUrl
+      $signtool = "C:\Program Files (x86)\Windows Kits\8.1\bin\x86\signtool.exe"
+      if (!($signtool | Test-Path)) 
+      {
+	      $signtool = "C:\Program Files (x86)\Windows Kits\10\App Certification Kit\signtool.exe"
+	      if (!($signtool | Test-Path)) 
+	      {
+	          throw "Cannot find SIGNTOOL"
+	      }
+      }
+      Write-Host "SIGNTOOL " $signtool
+      ForEach ($file in (Get-ChildItem "ship\*.msi"))
+      {
+	      Write-Host $file.FullName
+	      &$signtool sign /n "Nikolay Belykh" /v /fd sha256 /tr $timestampUrl /td sha256 /d "Visio TwoPoints Addin" /du "https://unmanagedvisio.com" /sha1 C1427D06DE2DF8B4E9878B7CC502094D3C9D2E03 $file.FullName 
+      }
+
 - task: CopyFiles@2
-  displayName: 'Copy SPFx WebPart to artifacts'
+  displayName: 'Copy to artifacts'
   inputs:
     Contents: ship/*.msi
     flattenFolders: true
     TargetFolder: '$(Build.ArtifactStagingDirectory)/ship'
 
 - publish: $(Build.ArtifactStagingDirectory)/ship
+  displayName: 'Publish artifacts'
   artifact: ship
